tests/res/functions/error_arity_many.say
fn add(a, b)! {
    return a + b;
}

add(1, 2, 3); // error: add expects 2 arguments, but was called with 3
